--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,244 +1,282 @@
-:root {
-    --main-color: rgb(150,150,150,0.5);
-    --color: black;
-  }
 *{
     box-sizing: border-box;
 }
 body{
-    margin: 0;
-    background:white;
     font-family: 'Open Sans', sans-serif;
-}
-ul{
-    list-style: none;
-    padding: 0;
+    margin: 0;
 }
 a{
     text-decoration: none;
-    color: black;
 }
-.error{
- font-size: 1.5em; 
- color:red;
- /* border: 3px solid red; */
- box-shadow: 1px 1px 1px;   
+.sticky{
+    background: black;
+    color: white;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+.titre,.head{
+    margin: 0;
+    display:flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding:0.5em 0;
+}
+.affich{
+    width: 50%;
+    margin: auto;
+    top: 10em;
+    position: fixed;
+    background: white;
+    left: 25%;
+}
+.affich div{
+    text-align: center;
+}
+.head_mess{
+    margin-right: 0.5em;
+    position:relative;
+}
+.head a{
+    text-decoration: none;
+    color: white;
+    font-size: 1.5em;
+}
+.recherche{
+    text-align: center;
+    font-size: 1.1em;
 }
 .success{
     font-size: 1.5em; 
     color:green;
-    /* border: 3px solid red; */
-    box-shadow: 1px 1px 1px; 
+    box-shadow: 1px 1px 5px;
+    width: 50%;
+    margin:auto;
+    text-align: center;
+}
+.error{
+    font-size: 1.5em; 
+    color:red;
+    box-shadow: 1px 1px 5px;
+    width: 50%;
+    margin:auto;
+    text-align: center;
+}
+.content{
+    display: flex;
 }
 .list_sujet{
-    padding: 1em;
     flex: 1;
-}
-.list_message{
-    flex:1;
-}
-.list a li{
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid black;
-    padding-bottom:0.5em;
-    margin-bottom: 1em;
-    background: white;
-    align-items: center;
-}
-.container{
-    /* width: 75%; */
-    margin: auto;
     text-align: center;
-    background: white;
-    /* margin-top: -1em; */
 }
-.home{
-    padding: 1em;
-    width: 25%;
-    text-align: left;
+.list{
+    list-style: none;
+    padding: 0;
 }
-.content,.sticky,.head{
-    display :flex;
-    justify-content: space-between;
-}
-.sticky{
-    position: sticky;
-    top: 0;
-    padding: 1em;
-    background: black;
-    color: white;
-}
-.crea_mess,.users{
-    position: sticky;
-    top:15em;
+.list a{
+    color:black;ss
 }
 .crea_sujet{
-    position: sticky;
-    top:10em;
+    text-align: center;
 }
-.connect {
-    position: sticky;
-    top:28em;
+.post{
+    flex: 1;
+    margin-right: 0.5em;
 }
-
-.sticky a{
-    color: white;
-}
-.head{
-    align-items: center;
-    width: 50%;
+.home{
+    width: 25%;
+    margin: 0 0.5em;
 }
 .users{
     height: 12.5em;
     overflow-y: scroll;
-    border-radius: 15px;
+    border: 2px solid green;
+    padding:1em;
+    position: relative;
+    margin-top: 1em;
+}
+.users h4{
     text-align: center;
-    border:2px solid green;
-    padding: 1em;
-    /* display: flex;
-    flex-wrap: wrap; */
 }
 .deleteUser{
     display: flex;
-    justify-content: space-evenly;
-    padding: 0.5em;
-    border-bottom:2px solid green;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    text-align: center;
+    padding: 1em;
+    width: 75%;
 }
-.del_user span{
-    flex: 1;
-}
-
-.users h4{
-    margin-top: 0;
+.connect{
+    text-align: left;
 }
 .users::-webkit-scrollbar{
     display: none;
 }
-.sujet_style{
-    width: 100%;
-    text-align: left;
+.users h4{
+    margin-top: 0;
 }
-.sujet_style > div:first-child{
-    padding: 0.5em;
-    font-size: 1.5em;
+.sticky_home{
+    
+    position: sticky;
+    top: 10em;
 }
-.author{
-    display: flex;
-    /* justify-content: space-between; */
-    padding: 0 1em;
-}
-.author div{
-    margin-right: 2em;
-}
-
 .form_flex{
     display: flex;
     flex-direction: column;
-    width: 80%;
-    margin: auto;
+    width: 75%;
 }
 .form_flex input{
-    margin-bottom: 1em;
-    line-height: 3em;
-    background: #aaa;
-    border:1px solid green;
+    margin-bottom: 0.5em;
+    padding: 0.5em;
+    line-height: 2em;
+}
+.bordure{
+    border:2px solid green;
+    margin: 0.5em;
+    width:90%;
+}
+
+.message,.sujet_style{
+    justify-content: space-between;
+    flex: 1;
+    align-items: center;
+    padding: 0.5em 0.5em;
+    margin: 1em;
+    font-size: 1.1em;
+}
+.message{
+    border: 2px solid green;
+}
+.message_list{
+    margin: 0.5em;
+    background: green;
+    color: white;
     border-radius: 15px;
-    padding:0 0.5em;
 }
 .message > div:first-child{
     text-align: left;
     border: 1px solid #aaa;
     padding: 1em;
-    background: green;
-    color: white;
+    color: black;
     font-weight: bold;
     border-radius: 15px;
+    margin-right: 0.5em;
 }
-.bordure{
-    margin-bottom: 3em;
-    border-bottom:1px solid green;
-    padding: 1em;
-    /* border-radius: 15px; */
-}
-p.bordure{
-    border:1px solid green;
-    font-weight: bold;
-}
-p.bordure a{
-    color: green;
-}
-.bordure >div:nth-child(2){
-    border: 1px solid #aaa;
-    border:2px solid green;
-    margin-top: 1em;
-}
-.head_mess{
+.views{
     display: flex;
     justify-content: space-between;
-    background: rgb(0,128,0,0.5);
-    padding: 0 1em;
-    border-radius: 15px;
 }
-.affich{
-    position:fixed;
-    top: 10em;
-    right: 11em;
-    width: 25%;
-    background: white;
-    border: 1px solid green;
-    z-index: 1;
+.info{
+    display: flex;
+    justify-content: space-around;
+    flex: 1;
 }
-.signal{
-    background: white;
-    color: black;
+.content_mess{
+    width: 75%;
+    margin:auto;
+    font-size: 1.5em;
 }
-.affich div{
-    margin: 1em;
-    border: 1px solid green;
+.block_mess{
+    display: flex;
+    flex-direction: column;
 }
-.content_sub{
-    flex:1;
-    width: 80%;
-    text-align: center;
+.block_mess .bordure:nth-child(even){
+    align-self: flex-end;
+
 }
-.content_sub p{
-    text-align: center;
+.subMess{
+    width: 90%;
+    margin:auto;
+    border-top:1px solid green;
+    margin:0.5em auto;
 }
-.post{
-    text-align: center;
+.separator{
+    width: 50%;
+    border-bottom: 2px solid green;
+    margin: 0.5em auto;
+    
 }
-form{
+.delete{
+    position: absolute;
+    top:0;
+    right: 0.5em;
+    cursor: pointer;
+}
+.button{
+    border: none;
+    background: #404040;
+    color: #ffffff !important;
     padding: 1em;
+    text-transform: uppercase;
+    border-radius: 6px;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+    position: absolute;
+    cursor: pointer;
+    }
+.button{
+    top:0;
+    left: 0.5em;
+}
+.crea_user{
+    background: green;
+    border: none;
+    padding: 1em;
+    text-transform: uppercase;
+    border-radius: 6px;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+    text-align: center;
+    position: absolute;
+}
+.crea{
+    background: green;
+    border: none;
+    padding: 1em;
+    text-transform: uppercase;
+    border-radius: 6px;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+}
+.crea_mess,.crea_sujet{
+    font-size: 1.5em;
+}
+.crea_user a{
+    color: white;
+}
+.button:hover,.crea_user:hover,.crea:hover,.crea_user a:hover {
+    color: #404040 !important;
+    font-weight: 700 !important;
+    letter-spacing: 3px;
+    background: none;
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    transition: all 0.3s ease 0s;
+}
+button{
+    background: white;
+    border: none;
+}
+.form_flex{
+    margin: auto;
+    padding: 2em;
 }
 @media screen and (max-width: 640px) {
     .content,.sticky,.head{
-        display :flex;
-        justify-content: space-between;
         flex-direction: column;
-    }
-    .sticky h1{
-        font-size: 1.5em;
-    }
-    .head{
-        margin:auto;
     }
     .home{
         width: 100%;
-       
     }
-    .list li a{
-        flex-direction: column;
+    .head{
+        text-align: center;
     }
-    .crea_sujet {
-        top: 15em;
+    .titre{
+        font-size: 1em;
     }
-    .author{
-        flex-direction: column-reverse;
-    }
-    .affich{
-        width: 50%;
-        right: 6em;
-        top:16em;
-    }
+   
   }
