--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,6 +5,59 @@ body{
     font-family: 'Open Sans', sans-serif;
     margin: 0;
 }
+.modal,.modal1{
+    position: fixed;
+    
+    height: 100vh;
+    width: 100vw;
+    background: rgb(0,0,0, 0.5);
+    animation: anim ease;
+    animation-duration: 1s;
+    z-index: 1;
+}
+.center_modal{
+    width: 100%;
+    height: 100%;
+    padding: 15vh;
+    align-self: center;
+    
+}
+#modal_img{
+    height: 100%;
+    max-height: 70vh;
+    display: block;
+    margin: auto;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.affich{
+    /* max-width: 75%; */
+    margin: auto;
+    padding-top: 5em;
+    z-index: 1;
+}
+.arrow{
+    position: fixed;
+    top: 50%;
+    left: 10em;
+}
+.arrow1{
+    position: fixed;
+    top: 50%;
+    right: 10em;
+}
+
+.transform {
+    transition: all 300ms ;
+}
+
+#modal_img.transform-active {
+    opacity: 1;
+}
+.hide{
+    display: none;
+}
 a{
     text-decoration: none;
 }
